feat: implement production-ready JWT security
Security fixes implemented:
- HttpOnly cookies for token storage (XSS protection)
- Token blacklist for logout/revocation
- Refresh token mechanism with rotation
- Security headers (XSS, CSP, Frame-Options)
- Strict CORS configuration
- 2-minute access token expiration for testing

New features:
- POST /api/auth/refresh - Refresh access token
- POST /api/auth/logout - Logout and invalidate tokens
- POST /api/auth/logout-all - Logout from all devices
- Automatic token refresh in frontend
- Max 5 active sessions per user

Files added:
- RefreshToken entity and repository
- TokenBlacklist entity and repository
- RefreshTokenService and TokenBlacklistService
- InvalidTokenException
- JWT_INFO.md and JWT_SECURITY_FIXES.md documentation