@@ -3,6 +3,7 @@ package com.sweetshop.config;
 import com.sweetshop.security.CustomUserDetailsService;
 import com.sweetshop.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -19,6 +20,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.XXssProtectionHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -28,7 +30,7 @@ import java.util.List;
 
 /**
  * Security configuration for the application.
- * Configures JWT authentication, CORS, and endpoint authorization.
+ * Configures JWT authentication, CORS, security headers, and endpoint authorization.
  */
 @Configuration
 @EnableWebSecurity
@@ -39,27 +41,34 @@ public class SecurityConfig {
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final CustomUserDetailsService userDetailsService;
 
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173}")
+    private String allowedOrigins;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .headers(headers -> headers
+                        .xssProtection(xss -> xss
+                                .headerValue(XXssProtectionHeaderWriter.HeaderValue.ENABLED_MODE_BLOCK))
+                        .contentSecurityPolicy(csp -> csp
+                                .policyDirectives("default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'"))
+                        .frameOptions(frame -> frame.deny())
+                        .contentTypeOptions(content -> {})
+                )
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints
                         .requestMatchers("/auth/**").permitAll()
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/sweets/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/sweets").permitAll()
-                        // Admin only endpoints - must come before generic patterns
                         .requestMatchers(HttpMethod.POST, "/sweets/*/restock").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.POST, "/sweets").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/sweets/*").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/sweets/*").hasRole("ADMIN")
-                        // Purchase endpoint - any authenticated user
                         .requestMatchers(HttpMethod.POST, "/sweets/*/purchase").authenticated()
-                        // Authenticated endpoints
                         .anyRequest().authenticated())
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -71,21 +80,29 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Allow origins from environment variable or defaults for development
-        String allowedOrigins = System.getenv("CORS_ALLOWED_ORIGINS");
-        if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
-            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        String envOrigins = System.getenv("CORS_ALLOWED_ORIGINS");
+        if (envOrigins != null && !envOrigins.isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList(envOrigins.split(",")));
         } else {
-            configuration.setAllowedOrigins(List.of(
-                    "http://localhost:3000",
-                    "http://localhost:5173"
-            ));
+            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
         }
-        // Also allow any vercel.app subdomain for deployment flexibility
-        configuration.setAllowedOriginPatterns(List.of("https://*.vercel.app", "https://*.railway.app"));
+        
+        configuration.setAllowedOriginPatterns(List.of(
+                "https://*.vercel.app",
+                "https://*.railway.app",
+                "https://*.netlify.app"
+        ));
         
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Cache-Control"
+        ));
+        configuration.setExposedHeaders(Arrays.asList("Set-Cookie"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
